--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
   <div class="flex justify-center items-center min-h-screen">
       <div class="testimonial-container w-full max-w-4xl">
           <div class="testimonial active bg-blue-500 text-white p-8 rounded-lg max-w-lg shadow-lg">
-              <div class="text-sm uppercase tracking-wide text-blue-200 font-semibold mb-4">What our user says</div>
+              <div class="text-sm uppercase tracking-wide text-blue-200 font-semibold mb-4">Founder Quote</div>
               <p class="text-2xl font-bold mb-6">"At Vestorix, we're harnessing the transformative power of AI to democratize access to expert financial guidance, empowering investors to make informed decisions and unlock their full potential."</p>
               <div class="flex items-center mt-4">
                   <img src="ofc.png" alt="User Profile" class="rounded-full w-18 h-16 mr-3">
